# plotcpp

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  envsetup.sh
app/: Plot2DHandler.cpp  Plot2DHandler.hpp  csv.cpp  csv.hpp  plotcpp.cpp
app/test/: SplitStringViewTest.cpp  plot2d_single_test.csv  plot2d_test.csv
cli/: BarPlotHandler.cpp  BarPlotHandler.hpp  HistogramHandler.cpp  HistogramHandler.hpp  Plot2DHandler.cpp  Plot2DHandler.hpp  SplitStringView.cpp  SplitStringView.hpp  cli.hpp  csv.cpp  csv.hpp  plotcpp.cpp
cli/test/: bar.csv  hist.csv
examples/: figure_tester.cpp
include/: BarPlot.hpp  BarPlotBase.hpp  DisplayService.hpp  Figure.hpp  GroupFigure.hpp  HistogramPlot.hpp  Plot2D.hpp  common.hpp  components.hpp  fonts.hpp  plotcpp.hpp  range.hpp  ranges.hpp  svg.hpp  utility.hpp  version.hpp
include/components/: Frame.hpp  Legend.hpp  style.hpp  text.hpp
src/: BarPlot.cpp  BarPlotBase.cpp  DisplayService.cpp  Figure.cpp  HistogramPlot.cpp  Plot2D.cpp  components.cpp  fonts.cpp  range.cpp  ranges.cpp  svg.cpp  version.cpp
src/components/: Frame.cpp  Legend.cpp
test/: AxisPartitionTest.cpp  Plot2DTest.cpp  RangesTest.cpp  UtilityTest.cpp  figure_tester.cpp  plot2d_tester.cpp  svg_tester.cpp
